Separación de estilos y creación de estilos section 1

--- a/punto-1-3/index.html
+++ b/punto-1-3/index.html
@@ -6,14 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UD Atenea Cursos</title>
-    <link href='https://fonts.googleapis.com/css?family=Jost' rel='stylesheet'>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="./styles/global-styles.css">
+    <link rel="stylesheet" href="./styles/header-styles.css">
+    <link rel="stylesheet" href="./styles/banner-styles.css">
+    <link rel="stylesheet" href="./styles/section-1-styles.css">
+    <link rel="stylesheet" href="./styles/section-2-styles.css">
 </head>
 
 <body>
     <header>
         <div class="header_navigation">
-            <img src="./public/images/header-logo.png" alt="header-logo">
+            <img src="./public/images/header-logo.png" alt="main-logo">
             <nav>
                 <ul>
                     <li><a href="#banner">Cursos</a></li>
@@ -28,22 +32,20 @@
                 <img src="./public/images/header-world.png" alt="world">
                 <spam>Español</spam>
             </div>
-
             <div>
                 <button>Ingresar</button>
             </div>
         </div>
-
     </header>
     <main>
         <section id="banner">
             <div>
                 <div>
-                    <h1>Aprovecha la era digital,
-                        toma clases en línea</h1>
-                    <p class="parrafo_uno">
+                    <h1>Aprovecha la era digital,toma clases en línea</h1>
+                    <p>
                         Toma los cursos más importantes de tecnología con clases en línea,
-                        donde podrás tener acceso a contenido actualizado desde la comodidad de tu casa y a tu ritmo
+                        donde podrás tener acceso a contenido actualizado desde la comodidad
+                        de tu casa y a tu ritmo
                     </p>
                 </div>
                 <div>
@@ -51,40 +53,35 @@
                     <button class="button__white">Planes</button>
                 </div>
             </div>
-            <img src="./public/images/banner-online.png" alt="onLine-education">
-
+            <img src="./public/images/banner-online.png" alt="onLine-education" width="550px" height="350px">
         </section>
         <section id="section-1">
-
-            <div>
+            <div class="section-1_info">
                 <h2>Por qué elegirnos a nosotros</h2>
-                <p>Somos una universidad en constante
+                <p>
+                    Somos una universidad en constante
                     actualización y nos gusta el cambio,
-                    te enseñamos tecnologías contemporáneas</p>
+                    te enseñamos tecnologías contemporáneas
+                </p>
             </div>
-
-            <div>
+            <div class="section-1_card">
                 <img src="./public/images/section1-education.png" alt="education" width="120px" heigt="120px">
                 <h3>Virtualidad y educación</h3>
             </div>
-
-            <div>
+            <div class="section-1_card">
                 <h3>Alcance de objetivos</h3>
                 <img src="./public/images/section1-goals.png" alt="goals" width="120px" heigt="120px">
             </div>
-
-            <div>
+            <div class="section-1_card">
                 <img src="./public/images/section1-teach.png" alt="teach" width="120px" heigt="120px">
                 <h3>Clases Inclusivas</h3>
             </div>
-
         </section>
         <section id="section-2">
             <div>
                 <img src="./public/images/section2-tools.png" alt="tools" width="500px" heigt="350px">
                 <div>
-                    <h2>Brindamos herramientas
-                        para que tu aprendizaje</h2>
+                    <h2>Brindamos herramientas para que tu aprendizaje</h2>
                     <h2>sea efectivo</h2>
                     <p>
                         Las herramientas digitales son
@@ -92,7 +89,7 @@
                         cada una de estas para brindarte
                         la mejor experiencia en línea
                     </p>
-                    <button class="button__orange" >Saber Más</button>
+                    <button class="button__orange">Saber Más</button>
                 </div>
             </div>
             <div>
@@ -114,7 +111,6 @@
     <footer id="footer">
         <di>
             <img src="./public/images/footer-logo.png" alt="footer-logo" width="200px" heigt="175px">
-
         </di>
         <div>
             <p>
@@ -124,7 +120,7 @@
             </p>
             <form method="post">
                 <input id="email" type="email" name="user_name" placeholder="Correo Eléctronico">
-                <button>Suscribirse</button>
+                <button>Subscribirse</button>
             </form>
         </div>
         <div>
@@ -135,12 +131,12 @@
                     <th>Contactanos</th>
                 </tr>
                 <tr>
-                    <td><a href="">Moodle</a></td>
+                    <td><a href="">Planestic</a></td>
                     <td><a href="">Qué costo tiene inscribirme?</a></td>
                     <td><a href="">+(57) 320 80 80</a></td>
                 </tr>
                 <tr>
-                    <td><a href="">Planestic</a></td>
+                    <td><a href="">Moodle</a></td>
                     <td><a href="">Comó obtengo mis certificados?</a></td>
                     <td><a href="">universidaddistrital@edu.co</a></td>
                 </tr>
