Agregación de estilos de section 2

--- a/punto-1-3/index.html
+++ b/punto-1-3/index.html
@@ -78,11 +78,11 @@
             </div>
         </section>
         <section id="section-2">
-            <div>
+            <div class="section-2_info">
                 <img src="./public/images/section2-tools.png" alt="tools" width="500px" heigt="350px">
                 <div>
                     <h2>Brindamos herramientas para que tu aprendizaje</h2>
-                    <h2>sea efectivo</h2>
+                    <h2 class="section-2_sub-pink">sea efectivo</h2>
                     <p>
                         Las herramientas digitales son
                         nuestras aliadas y aprovechamos
@@ -92,10 +92,10 @@
                     <button class="button__orange">Saber Más</button>
                 </div>
             </div>
-            <div>
+            <div class="section-2_info">
                 <div>
                     <h2>Educación pensando en</h2>
-                    <h2>objetivos alcanzados</h2>
+                    <h2 class="section-2_sub-pink">objetivos alcanzados</h2>
                     <p>
                         Es importante para nosotros que
                         las metas de cada uno de nuestros
