Agregación estilos footer

--- a/punto-1-3/index.html
+++ b/punto-1-3/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/banner-styles.css">
     <link rel="stylesheet" href="./styles/section-1-styles.css">
     <link rel="stylesheet" href="./styles/section-2-styles.css">
+    <link rel="stylesheet" href="./styles/footer-styles.css">
 </head>
 
 <body>
@@ -68,7 +69,7 @@
                 <img src="./public/images/section1-education.png" alt="education" width="120px" heigt="120px">
                 <h3>Virtualidad y educación</h3>
             </div>
-            <div class="section-1_card">
+            <div class="section-1_card section-1_card-down">
                 <h3>Alcance de objetivos</h3>
                 <img src="./public/images/section1-goals.png" alt="goals" width="120px" heigt="120px">
             </div>
@@ -109,47 +110,47 @@
         </section>
     </main>
     <footer id="footer">
-        <di>
+        <div class="footer_info">
             <img src="./public/images/footer-logo.png" alt="footer-logo" width="200px" heigt="175px">
-        </di>
-        <div>
-            <p>
-                Únete a nuestra comunidad para recibir
-                información actualizada de los cursos
-                y conferencia que ofrecemos
-            </p>
-            <form method="post">
-                <input id="email" type="email" name="user_name" placeholder="Correo Eléctronico">
-                <button>Subscribirse</button>
-            </form>
+            <div>
+                <p>
+                    Únete a nuestra comunidad para recibir
+                    información actualizada de los cursos
+                    y conferencia que ofrecemos
+                </p>
+                <form method="post">
+                    <input id="email" type="email" name="user_name" placeholder="Correo Eléctronico">
+                    <button class="button_pink">Subscribirse</button>
+                </form>
+            </div>
         </div>
         <div>
-            <table>
-                <tr>
-                    <th>Plataforma</th>
-                    <th>Preguntas frecuentes</th>
-                    <th>Contactanos</th>
-                </tr>
-                <tr>
-                    <td><a href="">Planestic</a></td>
-                    <td><a href="">Qué costo tiene inscribirme?</a></td>
-                    <td><a href="">+(57) 320 80 80</a></td>
-                </tr>
-                <tr>
-                    <td><a href="">Moodle</a></td>
-                    <td><a href="">Comó obtengo mis certificados?</a></td>
-                    <td><a href="">universidaddistrital@edu.co</a></td>
-                </tr>
-                <tr>
-                    <td><a href="">Atenea</a></td>
-                    <td><a href="">Medios de Pago</a></td>
-                    <td><a href="">cll 40 #7-19 - Bogotá</a></td>
-                </tr>
-                <tr>
-                    <td><a href="">Administración</a></td>
-                    <td><a href="">Qué convenios existen?</a></td>
-                </tr>
-            </table>
+                <table>
+                    <tr>
+                        <th>Plataforma</th>
+                        <th>Preguntas frecuentes</th>
+                        <th>Contactanos</th>
+                    </tr>
+                    <tr>
+                        <td><a href="">Planestic</a></td>
+                        <td><a href="">Qué costo tiene inscribirme?</a></td>
+                        <td><a href="">+(57) 320 80 80</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">Moodle</a></td>
+                        <td><a href="">Comó obtengo mis certificados?</a></td>
+                        <td><a href="">universidaddistrital@edu.co</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">Atenea</a></td>
+                        <td><a href="">Medios de Pago</a></td>
+                        <td><a href="">cll 40 #7-19 - Bogotá</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="">Administración</a></td>
+                        <td><a href="">Qué convenios existen?</a></td>
+                    </tr>
+                </table>
         </div>
     </footer>
 </body>
